# manymove_color_signal

./: CMakeLists.txt  README.md  package.xml  workshop_ROSCon2025_FR_DE.md
docker/: Dockerfile.manymove_color_signal  bootstrap_color_signal_workspace.sh  run_manymove_color_signal_container.sh
include/manymove_color_signal/: bt_nodes.hpp
launch/: bt_client_ur_color_signal.launch.py  ur_movegroup_fake_cpp_trees_color_signal.launch.py
src/: bt_client_ur_color_signal.cpp  bt_nodes.cpp  color_signal_demo.cpp
